# cmp653-benchmark

./: .gitignore  Final_Report_OnerBalcikli.docx  README.md
data_prep/: fetch_and_synthesize.py  requirements.txt
docker/: Dockerfile  docker-compose.yml
scripts/: baseline_recall.py
src/: CMakeLists.txt  latency_benchmark.cpp  main.cpp
